  Contributed by ed.torbett@simulation-systems.co.uk.

* Improved memory usage when integrated with very large LXR databases.
  Contributed by Patrick Diamond <patrick_diamond@mailc.net>.

* Newer versions of the Subversion client (1.3.2) were returning
  warning text that was not parsed correctly.  This has now been
  fixed.  Contributed by Vladimir Sizikov <vsizikov@gmail.com>.

Version 1.9.1

* Correct problem introduced in 1.9.0 release where the email address
  field in the add comment tooltip was not being stored correctly in
  the Codestriker cookie.  For reviewers who have never created a
  Codestriker topic, the email field not remember the previous value.
  This has now been corrected.

* When adding a comment via a link from an email, the confirmation
  screen now contains links to the topic text and topic comments, for
  convenience.

Version 1.9.0

* Now using overlib javascript library
  (http://www.bosrup.com/web/overlib) for formatted "tooltips".  When
  the mouse hovers over a line where a comment has been made, a
  formatted "tooltip" window appears, which contains the comment text
  formatted appropriately, with author and date header information
  bolded.  The tooltip is not removed until the mouse is moved off the
  line.  Help text on the create topic and search screens have been
  modified to use this tooltip library as well as opposed to
  javascript alert windows.

* Comments are now added view an overlib tooltip window, rather than
  using a separate browser window.  This speeds up the reviewing
  process and keeps the reviewer focussed on a single browser window.

* It is now possible to create a comment associated with a specific
  file, or the topic itself, rather than being associated with a
  specific line.  This allows reviewers to create file-level or
  topic-level comments.

* There are patches available for Bugzilla 2.16 and Bugzilla 2.18 in
  the bin subdirectory, where the view bug screen is modified to